--- a/Cuaderno/tex/introduccion-dia5.tex
+++ b/Cuaderno/tex/introduccion-dia5.tex
@@ -1,13 +1,13 @@
-Hola! Bienvenido al cuarto día del taller Programa Tus Ideas :)
+Hola! Bienvenido al quinto día del taller Programa Tus Ideas :)
 
 \paragraph{}
-Hoy aprenderás a desarrollar aplicaciones que envían mensajes de texto
-(SMS) y que pueden procesar mensajes de texto
-recibidos. Desarrollaremos la aplicación \appName{No SMS al Volante},
-que responde automáticamente a los mensajes recibidos con una
-respuesta predeterminada. Tambíen aprenderás a manejar una nueva
-manera de almacenar datos en variables, usando \emph{listas}. Las
-listas te permiten tener en un mismo lugar una \emph{colección} de
-valores, y realizar operaciones sobre estos valores de manera
-general---es decir, que no importará si la lista tiene 1, 3 o 100
-elementos, tu código será el mismo!
+Hoy aprenderás a desarrollar aplicaciones utilizan los sensores de tu
+dispositivo Android. Primero te presentamos un tutorial para la
+aplicación \appName{¿Dónde está mi Auto?} que utiliza la capacidad de
+\emph{geolocalización} de tu dispositivo, es decir, que obtiene tu
+ubicación actual utilizando el sistema de posicionamiento global
+GPS. Luego te mostramos cómo usar otros sensores del teléfono: el
+acelerómetro (en más detalle que el primer día), y el sensor de
+ubicación, que te permite mover elementos en la pantalla según el
+movimiento del teléfono---ideal para juegos y otras aplicaciones
+interactivas!
